# mcp-auth-proxy

./: Cargo.toml  config.example.toml  config.toml  release-workflow.md
.github/: cliff.toml
.github/workflows/: ci.yml  prepare-release-pr.yml  release.yml  tag-release-pr.yml
data/: servers.json
scripts/: release.sh
src/: config.rs  main.rs  mcp_logging.rs  settings.rs  tool_cache.rs
src/auth/: mod.rs  oauth.rs  static_token.rs
src/credential/: bitwarden.rs  keepass_provider.rs  mod.rs  onepassword.rs
src/proxy/: http_upstream.rs  mod.rs  stdio_upstream.rs
src/storage/: encrypted_file.rs  keychain.rs  mod.rs
src/web/: settings.html
